--- a/index.html
+++ b/index.html
@@ -313,7 +313,9 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
           </p>
           <div class="mt-3">
             <a href="#plans" class="btn btn-brand mr-2 mb-2">See Plans</a>
-            <a href="#work" class="btn btn-ghost mb-2">View Work</a>
+            <a href="#benefits" class="btn btn-ghost mb-2">What We Do</a> 
+
+            
           </div>
           <div class="mt-3 small">Trusted by <strong>43+</strong> clients • Avg onboarding <strong>7-14 days</strong></div>
         </div>
