--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
           </p>
           <div class="mt-3">
             <a href="#plans" class="btn btn-brand mr-2 mb-2">See Plans</a>
-            <a href="#benefits" class="btn btn-ghost mb-2">What We Do</a> 
+            <a href="/samples.html" class="btn btn-ghost mb-2">See Past Work</a> 
 
             
           </div>
@@ -328,8 +328,8 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
           </div> -->
 
           <div class="hero-card p-3 p-md-4 text-center">
-            <div class="small mb-1">🎉 Special Offer</div>
-            <div class="h5 mb-1">$0 setup fee to fall in love with a new website</div>
+            <div class="small mb-1">🎉 Limited Time Offer</div>
+            <div class="h5 mb-1">$0 setup fee to fall in love with a brand new website. </div>
             <div class="small">Usually $299 • Ends Sept 30</div>
             <a href="https://webeaze.io/consultation" class="btn btn-brand mt-3">Fall in Love</a>
           </div>
