--- a/portal.html
+++ b/portal.html
@@ -426,9 +426,9 @@
       } else if (d>=1 && d<=4 && h>=17){
         text = "We're closed for today. We'll return tomorrow at 9:00am ET."; bg = "#CD5C5C";
       } else if (d===5 && h>=17){
-        text = "Were closed for the weekend. We'll return Monday at 9:00am ET."; bg = "#CD5C5C";
+        text = "We're closed for the weekend. We'll return Monday at 9:00am ET."; bg = "#CD5C5C";
       } else {
-        text = "Were away. We'll return Monday at 9:00am ET."; bg = "#CD5C5C";
+        text = "We're away. We'll return Monday at 9:00am ET."; bg = "#CD5C5C";
       }
       msg.textContent = text;
       msg.style.backgroundColor = bg;
