--- a/about.html
+++ b/about.html
@@ -164,11 +164,11 @@
       <div class="grid grid-3">
         <div class="card-lite">
           <h5><strong>Design & Build</strong></h5>
-          <p>Clean, fast, responsive websites tailored to your niche—educators, trades, travel pros, and more.</p>
+          <p>Clean, fast, responsive websites tailored to your niche. Includes educators, trades, travel pros, and more.</p>
         </div>
         <div class="card-lite">
           <h5><strong>Ongoing Care</strong></h5>
-          <p>Hosting guidance, updates, security, and content changes—covered by your subscription.</p>
+          <p>Hosting guidance, updates, security, and content changes. All covered by your subscription.</p>
         </div>
         <div class="card-lite">
           <h5><strong>Growth Tools</strong></h5>
@@ -190,7 +190,7 @@
         </div>
         <div class="card-solid">
           <h5><strong>Multiple support channels</strong></h5>
-          <p>Zoom, Live Chat, and Email—talk to a real human when you need changes or advice.</p>
+          <p>Zoom, Live Chat, and Email. Talk to a real human when you need changes or advice.</p>
         </div>
         <div class="card-solid">
           <h5><strong>Self-serve Help Center</strong></h5>
@@ -212,7 +212,7 @@
       <div class="timeline">
         <div class="tl-item">
           <h6 class="mb-1"><strong>Oct 2024</strong> — Billy Joinville Web Services launches</h6>
-          <p class="mb-0">Helping small businesses get online fast—with care and clarity.</p>
+          <p class="mb-0">Helping small businesses get online fast. With care and clarity.</p>
         </div>
         <div class="tl-item">
           <h6 class="mb-1"><strong>Mar 2025</strong> — Rebrand to WebEaze</h6>
@@ -236,7 +236,7 @@
           <img src="images/billy-o-portrait.png" alt="Billy Joinville headshot" loading="lazy" />
           <h5 class="mt-3"><strong>Billy Joinville</strong></h5>
           <p class="role">Founder</p>
-          <p>Billy is a web designer and Computer Science student at the University of Miami. He started WebEaze to make quality websites accessible—and to stand by clients with real, ongoing support.</p>
+          <p>Billy is a web designer and Computer Science student at the University of Miami. He started WebEaze to make quality websites accessible, and to stand by clients with real, ongoing support.</p>
         </article>
         <article class="team-card">
           <img src="images/headshot-goerlitz.png" alt="Goerlitz Edmond headshot" loading="lazy" />
