--- a/maintenance.html
+++ b/maintenance.html
@@ -148,9 +148,9 @@
     <div class="row align-items-center">
       <div class="col-md-7">
         <div class="eyebrow">Elegant • Effortless • Ongoing Care</div>
-        <h1 class="headline mt-2 display-4">Unlimited maintenance. <span class="sparkle">Seriously</span>.</h1>
+        <h1 class="headline mt-2 display-4">Live Chat, Email, Zoom. <span class="sparkle">Anytime</span>.</h1>
         <p class="subhead mt-3">
-          No hourly surprises. No stress. Just proactive fixes, updates, and performance boosts — all under one clear monthly or yearly plan.
+          Unlimited maintenance because we know your business doesn't stop. One simple monthly or yearly plan. No hourly billing.
         </p>
         <div class="mt-3">
           <a href="/consultation.html" class="btn btn-brand mr-2 mb-2">Free Consultation</a>
