Updates to refund policy and contact

--- a/refund-policy.html
+++ b/refund-policy.html
@@ -33,7 +33,7 @@
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
     body{font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;color:#fff;background:var(--purple)}
-    a{color:var(--gold)} a:hover{opacity:.9}
+    a{color:var(--brown)} a:hover{opacity:.9}
     .container-narrow{max-width:980px;margin:0 auto}
 
     /* Hero */
@@ -197,6 +197,10 @@
   </section>
 
   <footer>
+
+    <style>
+        footer a { color: #ffd700; text-decoration: underline; }
+    </style>
     <p class="small mb-1">© 2025 WebEaze. Created and designed by WebEaze. Published on <a href="https://pages.github.com/">GitHub</a>.</p>
     <p class="small">Follow us: <a href="https://facebook.com/61568824951084" target="_blank" rel="noopener">Facebook</a> · <a href="https://www.linkedin.com/company/webeaze" target="_blank" rel="noopener">LinkedIn</a> · <a href="https://instagram.com/webeaze.io" target="_blank" rel="noopener">Instagram</a></p>
   </footer>
