links changed faq

--- a/anniversary.html
+++ b/anniversary.html
@@ -178,7 +178,7 @@
       <div>&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
       <div class="mt-1">
         <a href="https://billyjoinville.me/terms#privacy-policy">Privacy Policy</a> ·
-        <a href="https://billyjoinville.me/terms">Terms</a>
+        <a href="terms.html">Terms</a>
       </div>
     </div>
   </footer>
