--- a/maintenance.html
+++ b/maintenance.html
@@ -297,8 +297,8 @@
   <div class="container container-narrow">
     <div class="mb-1">&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
     <div class="mb-2 small">
-      <a href="https://billyjoinville.me/terms#privacy-policy">Privacy Policy</a> ·
-      <a href="https://billyjoinville.me/terms">Terms</a>
+      <a href="terms.html#privacy">Privacy Policy</a> ·
+      <a href="terms.html">Terms</a>
     </div>
     <div class="small">Made with ☕ in Delaware, USA</div>
   </div>
