--- a/portal.html
+++ b/portal.html
@@ -358,7 +358,7 @@
         <ul style="list-style:none;padding-left:0;margin:0">
           <li><a href="about.html">About Us</a></li>
           <li><a href="https://webeaze.tawk.help">Help Center</a></li>
-          <li><a href="https://billyjoinville.me/terms">Terms & Privacy</a></li>
+          <li><a href="terms.html">Terms & Privacy</a></li>
           <li><a href="site-map.html">Site Map</a></li>
           <li><a href="#top">Back to Top</a></li>
         </ul>
