--- a/site-map.html
+++ b/site-map.html
@@ -126,7 +126,7 @@
         <div class="card-lite">
           <h5 class="mb-2"><strong>Legal & Policies</strong></h5>
           <ul class="list-clean">
-            <li><a href="https://billyjoinville.me/terms" target="_blank" rel="noopener">Terms & Privacy</a></li>
+            <li><a href="terms.html" target="_blank" rel="noopener">Terms & Privacy</a></li>
             <li><a href="/refund-policy.html">Refund Policy</a></li>
             <li><a href="/site-map.html" aria-current="page">Site Map</a></li>
             <li class="muted">Accessibility statement (coming soon)</li>
