--- a/pricing.html
+++ b/pricing.html
@@ -468,7 +468,7 @@
         <ul style="list-style:none;padding-left:0;margin:0">
           <li><a href="about.html">About Us</a></li>
           <li><a href="https://webeaze.tawk.help" target="_blank" rel="noopener">Help Center</a></li>
-          <li><a href="https://billyjoinville.me/terms" target="_blank" rel="noopener">Terms & Privacy</a></li>
+          <li><a href="terms.html" target="_blank" rel="noopener">Terms & Privacy</a></li>
           <li><a href="site-map.html">Site Map</a></li>
           <li><a href="#top">Back to Top</a></li>
         </ul>
