--- a/website-request.html
+++ b/website-request.html
@@ -170,7 +170,7 @@
   </nav>
   <!-- Nav styles-->
 <style>
-  /* NAV – consistent spacing, alignment, and contrast */
+
 .site-nav{
   position: sticky; top: 0; z-index: 1000;
   background: #14141a;           /* dark, even background */
@@ -213,7 +213,7 @@
   .site-nav .navbar-brand{ margin-right: 24px; }
 }
 
-/* Mobile: bigger tap targets, stacked menu */
+
 @media (max-width: 991.98px){
   .site-nav .navbar-collapse{
     padding-top: 8px; padding-bottom: 10px;
@@ -223,10 +223,24 @@
     padding: .65rem .75rem;
   }
   .site-nav .navbar-nav .nav-item + .nav-item{
-    margin-left: 0;                /* remove left gap when stacked */
+    margin-left: 0;             
     margin-top: 6px;
   }
 }
+
+.site-nav{
+  transition: transform .28s ease;  
+  will-change: transform;
+}
+.site-nav.nav-hide{
+  transform: translateY(-110%);           
+}
+
+
+@media (max-width: 991.98px){
+  .site-nav.nav-locked{ transform: none; }
+}
+
 
 </style>
   <!-- Hero -->
