--- a/site-map.html
+++ b/site-map.html
@@ -129,7 +129,8 @@
             <li><a href="terms.html" target="_blank" rel="noopener">Terms & Privacy</a></li>
             <li><a href="/refund-policy.html">Refund Policy</a></li>
             <li><a href="/site-map.html" aria-current="page">Site Map</a></li>
-            <li class="muted">Accessibility statement (coming soon)</li>
+            <li><a href="/accessibility.html">Accessibility statement</a></li>
+            <!-- <li class="muted">Accessibility statement (coming soon)</li> -->
           </ul>
         </div>
       </div>
