--- a/website-request.html
+++ b/website-request.html
@@ -140,7 +140,7 @@
 <body>
   <!-- Promo -->
   <div class="promo-bar">
-    Save $1,029 when you switch to annual. Ends 9/30.
+    1 month on us when you switch to annual. Ends 9/30.
     <a class="btn" href="https://billing.stripe.com/p/login/7sI3gfaO14CEdlm144">Upgrade</a>
   </div>
 
