--- a/pricing.html
+++ b/pricing.html
@@ -381,7 +381,7 @@
           <h3>Essential</h3>
           <div class="plan-meta">Great for new businesses</div>
           <ul class="feature-list">
-            <li><i class="fas fa-check check"></i> Custom design — <b>up to 3 pages</b></li>
+            <li><i class="fas fa-check check"></i> Custom design <b>up to 3 pages</b></li>
             <li><i class="fas fa-check check"></i> Domain & hosting setup</li>
             <li><i class="fas fa-check check"></i> Mobile optimization</li>
             <li><i class="fas fa-times x"></i> Domain/hosting coverage</li>
@@ -397,7 +397,7 @@
           <h3>Growth</h3>
           <div class="plan-meta">More pages & support</div>
           <ul class="feature-list">
-            <li><i class="fas fa-check check"></i> Custom design — <b>up to 6 pages</b></li>
+            <li><i class="fas fa-check check"></i> Custom design <b>up to 6 pages</b></li>
             <li><i class="fas fa-check check"></i> Domain & hosting setup</li>
             <li><i class="fas fa-check check"></i> Mobile optimization</li>
             <li><i class="fas fa-check check"></i> Domain/hosting coverage <span class="feature-note">up to $50</span></li>
@@ -412,7 +412,7 @@
           <h3>Elite</h3>
           <div class="plan-meta">Everything + ads/reporting</div>
           <ul class="feature-list">
-            <li><i class="fas fa-check check"></i> Custom design — <b>unlimited pages</b></li>
+            <li><i class="fas fa-check check"></i> Custom design <b>unlimited pages</b></li>
             <li><i class="fas fa-check check"></i> Domain & hosting setup</li>
             <li><i class="fas fa-check check"></i> Mobile optimization</li>
             <li><i class="fas fa-check check"></i> Domain/hosting coverage <span class="feature-note">full</span></li>
